force-app/main/default/objects/CaseToOutletdispenser__c/CaseToOutletdispenser__c.object-meta.xml
<CustomObject>
    <description>This is a junction object between case object and outlet dispenser object</description>
    <label>Case To OD</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case To Outlet Dispensers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>