force-app/main/default/objects/CaseToOutletdispenser__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <description>Parent case</description>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Case To Outlet Dispensers</relationshipLabel>
    <relationshipName>CaseToOutletdispensers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>