force-app/main/default/objects/CaseToOutletdispenser__c/fields/ContentBundleVersion__c.field-meta.xml
<CustomField>
    <fullName>ContentBundleVersion__c</fullName>
    <formula>Outlet_Dispenser__r.ContentBundleVersion__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Content Bundle Version</label>
    <type>Text</type>
</CustomField>