force-app/main/default/objects/CaseToOutletdispenser__c/fields/ContentSpecVersion__c.field-meta.xml
<CustomField>
    <fullName>ContentSpecVersion__c</fullName>
    <formula>Outlet_Dispenser__r.ContentSpecVersion__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Content Spec Version</label>
    <type>Text</type>
</CustomField>