force-app/main/default/objects/CaseToOutletdispenser__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Case_To_Outletdispensers</relationshipName>
    <type>Lookup</type>
</CustomField>