force-app/main/default/objects/CaseToOutletdispenser__c/fields/FS_Active_Inactive__c.field-meta.xml
<CustomField>
    <fullName>FS_Active_Inactive__c</fullName>
    <formula>Outlet_Dispenser__r.FS_IsActive__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active/Inactive</label>
    <type>Checkbox</type>
</CustomField>