force-app/main/default/objects/CaseToOutletdispenser__c/fields/FS_Build_Id_SW_Version__c.field-meta.xml
<CustomField>
    <fullName>FS_Build_Id_SW_Version__c</fullName>
    <formula>Outlet_Dispenser__r.FS_Build_Id_SW_Version__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Build ID/SW Version</label>
    <type>Text</type>
</CustomField>