force-app/main/default/objects/CaseToOutletdispenser__c/fields/FS_Bundle_Name__c.field-meta.xml
<CustomField>
    <fullName>FS_Bundle_Name__c</fullName>
    <formula>Outlet_Dispenser__r.FS_Bundle_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bundle Name</label>
    <type>Text</type>
</CustomField>