force-app/main/default/objects/CaseToOutletdispenser__c/fields/FS_CaseType__c.field-meta.xml
<CustomField>
    <fullName>FS_CaseType__c</fullName>
    <label>FS_CaseType</label>
    <length>40</length>
    <type>Text</type>
</CustomField>