force-app/main/default/objects/CaseToOutletdispenser__c/fields/FS_CE_Connection_Date_Last__c.field-meta.xml
<CustomField>
    <fullName>FS_CE_Connection_Date_Last__c</fullName>
    <formula>Outlet_Dispenser__r.FS_CE_Connection_Date_Last__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CE Connection Date(Last)</label>
    <type>Date</type>
</CustomField>