force-app/main/default/objects/CaseToOutletdispenser__c/fields/FS_Chain_ACN__c.field-meta.xml
<CustomField>
    <fullName>FS_Chain_ACN__c</fullName>
    <formula>Outlet_Dispenser__r.FS_Outlet__r.FS_Chain_ACN__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Chain ACN</label>
    <type>Text</type>
</CustomField>