force-app/main/default/objects/CaseToOutletdispenser__c/fields/FS_CMS_Version__c.field-meta.xml
<CustomField>
    <fullName>FS_CMS_Version__c</fullName>
    <formula>Outlet_Dispenser__r.FS_CMS_Version__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CMS Version</label>
    <type>Text</type>
</CustomField>