force-app/main/default/objects/CaseToOutletdispenser__c/fields/FS_Customer_Classification__c.field-meta.xml
<CustomField>
    <fullName>FS_Customer_Classification__c</fullName>
    <formula>Outlet_Dispenser__r.FS_Outlet__r.FS_Customer_Classification__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Classification</label>
    <type>Text</type>
</CustomField>