force-app/main/default/objects/CaseToOutletdispenser__c/fields/FS_Dispenser_Status__c.field-meta.xml
<CustomField>
    <fullName>FS_Dispenser_Status__c</fullName>
    <formula>TEXT(Outlet_Dispenser__r.FS_Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dispenser Status</label>
    <type>Text</type>
</CustomField>