force-app/main/default/objects/CaseToOutletdispenser__c/fields/FS_Document_Number__c.field-meta.xml
<CustomField>
    <fullName>FS_Document_Number__c</fullName>
    <formula>Outlet_Dispenser__r.FS_Document_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Document Number</label>
    <type>Text</type>
</CustomField>