force-app/main/default/objects/CaseToOutletdispenser__c/fields/FS_Enrollment_Date__c.field-meta.xml
<CustomField>
    <fullName>FS_Enrollment_Date__c</fullName>
    <formula>Outlet_Dispenser__r.FS_Date_Installed2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Enrollment Date</label>
    <type>Date</type>
</CustomField>