force-app/main/default/objects/CaseToOutletdispenser__c/fields/FS_Install_status__c.field-meta.xml
<CustomField>
    <fullName>FS_Install_status__c</fullName>
    <formula>Outlet_Dispenser__r.FS_Install_Status__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Install Base Status</label>
    <type>Text</type>
</CustomField>