force-app/main/default/objects/CaseToOutletdispenser__c/fields/FS_IP_Captured_On__c.field-meta.xml
<CustomField>
    <fullName>FS_IP_Captured_On__c</fullName>
    <formula>Outlet_Dispenser__r.FS_IP_Captured_On__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IP Captured On</label>
    <type>Date</type>
</CustomField>