force-app/main/default/objects/CaseToOutletdispenser__c/fields/FS_JDE_install_Date__c.field-meta.xml
<CustomField>
    <fullName>FS_JDE_install_Date__c</fullName>
    <formula>Outlet_Dispenser__r.FS_JDE_Install_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>JDE Install Date</label>
    <type>Date</type>
</CustomField>