force-app/main/default/objects/CaseToOutletdispenser__c/fields/FS_last_cda_connect_date__c.field-meta.xml
<CustomField>
    <fullName>FS_last_cda_connect_date__c</fullName>
    <formula>Outlet_Dispenser__r.FS_Last_CDA_Connect_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last CDA Connect Date</label>
    <type>Date</type>
</CustomField>