force-app/main/default/objects/CaseToOutletdispenser__c/fields/FS_Last_Pour_Date__c.field-meta.xml
<CustomField>
    <fullName>FS_Last_Pour_Date__c</fullName>
    <formula>Outlet_Dispenser__r.FS_Last_Pour_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Pour Date</label>
    <type>Date</type>
</CustomField>