force-app/main/default/objects/CaseToOutletdispenser__c/fields/FS_Last_Status__c.field-meta.xml
<CustomField>
    <fullName>FS_Last_Status__c</fullName>
    <formula>Outlet_Dispenser__r.FS_Last_Status__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Status</label>
    <type>Text</type>
</CustomField>