force-app/main/default/objects/CaseToOutletdispenser__c/fields/FS_Last_Status_Descr__c.field-meta.xml
<CustomField>
    <fullName>FS_Last_Status_Descr__c</fullName>
    <formula>Outlet_Dispenser__r.FS_Last_Status_Descr__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Status Description</label>
    <type>Text</type>
</CustomField>