force-app/main/default/objects/CaseToOutletdispenser__c/fields/FS_Last_System_DB__c.field-meta.xml
<CustomField>
    <fullName>FS_Last_System_DB__c</fullName>
    <formula>Outlet_Dispenser__r.FS_Last_System_DB__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last System DB</label>
    <type>Date</type>
</CustomField>