force-app/main/default/objects/CaseToOutletdispenser__c/fields/FS_Line_Number__c.field-meta.xml
<CustomField>
    <fullName>FS_Line_Number__c</fullName>
    <formula>Outlet_Dispenser__r.FS_Line_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Line Number</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>