force-app/main/default/objects/CaseToOutletdispenser__c/fields/FS_Max_Signal_Strength__c.field-meta.xml
<CustomField>
    <fullName>FS_Max_Signal_Strength__c</fullName>
    <formula>Outlet_Dispenser__r.FS_Max_Signal_Strength__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Max Signal Strength</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>