force-app/main/default/objects/CaseToOutletdispenser__c/fields/FS_Modem_Last_Avg_Signal__c.field-meta.xml
<CustomField>
    <fullName>FS_Modem_Last_Avg_Signal__c</fullName>
    <formula>Outlet_Dispenser__r.FS_Modem_Last_Avg_Signal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Modem Last Signal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>