force-app/main/default/objects/CaseToOutletdispenser__c/fields/FS_Modem_Model_int__c.field-meta.xml
<CustomField>
    <fullName>FS_Modem_Model_int__c</fullName>
    <formula>Outlet_Dispenser__r.Modem_Model_int__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Modem Model</label>
    <type>Text</type>
</CustomField>