force-app/main/default/objects/CaseToOutletdispenser__c/fields/FS_of_days_data_posted__c.field-meta.xml
<CustomField>
    <fullName>FS_of_days_data_posted__c</fullName>
    <formula>Outlet_Dispenser__r.FS_of_days_data_posted__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label># of Days Data Posted</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>