force-app/main/default/objects/CaseToOutletdispenser__c/fields/FS_of_Previous_Days_Called_Home__c.field-meta.xml
<CustomField>
    <fullName>FS_of_Previous_Days_Called_Home__c</fullName>
    <formula>Outlet_Dispenser__r.FS_of_Previous_Days_Called_Home__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label># of Previous Days Called Home</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>