force-app/main/default/objects/CaseToOutletdispenser__c/fields/FS_Order_Type__c.field-meta.xml
<CustomField>
    <fullName>FS_Order_Type__c</fullName>
    <formula>Outlet_Dispenser__r.FS_Order_Type__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Document Type</label>
    <type>Text</type>
</CustomField>