force-app/main/default/objects/CaseToOutletdispenser__c/fields/FS_SAP__c.field-meta.xml
<CustomField>
    <fullName>FS_SAP__c</fullName>
    <formula>Outlet_Dispenser__r.FS_Outlet__r.FS_SAP_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SAP#</label>
    <type>Text</type>
</CustomField>