force-app/main/default/objects/CaseToOutletdispenser__c/fields/FS_Static_Enrollment_Date__c.field-meta.xml
<CustomField>
    <fullName>FS_Static_Enrollment_Date__c</fullName>
    <inlineHelpText>Value at Dispenser level when case was created</inlineHelpText>
    <label>Static Last Enrollment Date</label>
    <type>Date</type>
</CustomField>