force-app/main/default/objects/CaseToOutletdispenser__c/fields/FS_Static_IP_Address__c.field-meta.xml
<CustomField>
    <fullName>FS_Static_IP_Address__c</fullName>
    <inlineHelpText>Value at Dispenser level when case was created</inlineHelpText>
    <label>Static IP Address</label>
    <length>25</length>
    <type>Text</type>
</CustomField>