force-app/main/default/objects/CaseToOutletdispenser__c/fields/FS_Static_SAP__c.field-meta.xml
<CustomField>
    <fullName>FS_Static_SAP__c</fullName>
    <inlineHelpText>Value at Dispenser level when case was created</inlineHelpText>
    <label>Static SAP#</label>
    <length>25</length>
    <type>Text</type>
</CustomField>