force-app/main/default/objects/CaseToOutletdispenser__c/fields/Outlet_Dispenser__c.field-meta.xml
<CustomField>
    <fullName>Outlet_Dispenser__c</fullName>
    <label>Outlet Dispenser</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>$Source.Customer__c</field>
            <operation>equals</operation>
            <valueField>FS_Outlet_Dispenser__c.FS_Outlet__c</valueField>
        </filterItems>
        <filterItems>
            <field>FS_Outlet_Dispenser__c.FS_IsActive__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>FS_Outlet_Dispenser__c</referenceTo>
    <relationshipName>CaseToOutletdispensers</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>