force-app/main/default/objects/CaseToOutletdispenser__c/fields/Serial_Number_Text__c.field-meta.xml
<CustomField>
    <fullName>Serial_Number_Text__c</fullName>
    <label>Serial Number Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>