force-app/main/default/objects/CaseToOutletdispenser__c/fields/ZPL__c.field-meta.xml
<CustomField>
    <fullName>ZPL__c</fullName>
    <formula>Outlet_Dispenser__r.FS_Serial_Number2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ZPL</label>
    <type>Text</type>
</CustomField>